--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,94 @@
+absl-py==1.2.0
 altgraph==0.17.3
+backcall==0.2.0
+boto3==1.23.10
+botocore==1.26.10
+cachetools==4.2.4
 certifi==2022.9.24
 charset-normalizer==2.0.12
+click==8.0.4
+colorama==0.4.5
+cycler==0.11.0
+dataclasses==0.8
+decorator==5.1.1
 docopt==0.6.2
 fbs==1.1.4
 fbs-tutorial==1.0.0
 fbs-tutorial-shim==1.0.2
 fbs-tutorial-shim-windows==1.0.0
+fire==0.4.0
 future==0.18.2
+google-auth==2.12.0
+google-auth-oauthlib==0.4.6
+grpcio==1.48.2
 idna==3.4
+importlib-metadata==4.8.3
+importlib-resources==5.4.0
+ipython==7.16.3
+ipython-genutils==0.2.0
+jedi==0.17.2
 Jinja2==3.0.3
+jmespath==0.10.0
+kiwisolver==1.3.1
 macholib==1.16.2
+Markdown==3.3.7
 MarkupSafe==2.0.1
+matplotlib==3.3.4
 numpy==1.19.5
-opencv-python==4.1.0.25
+oauthlib==3.2.1
+opencv-python==4.6.0.66
 opencv-python-headless==4.1.0.25
+pandas==1.1.5
+parso==0.7.1
 pefile==2022.5.30
+pickleshare==0.7.5
+Pillow==8.4.0
 pipreqs==0.4.11
+prompt-toolkit==3.0.31
+protobuf==3.19.6
+psutil==5.9.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybboxes==0.1.5
+Pygments==2.13.0
 PyInstaller==3.4
+pyparsing==3.0.9
 pypiwin32==223
 PyQt5==5.9.2
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.1
 PyQtChart==5.9.2
+python-dateutil==2.8.2
+pytz==2022.4
 pywin32==304
 pywin32-ctypes==0.2.0
+PyYAML==6.0
 qstring==0.2.1
 qt-material==2.5
 requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.9
+s3transfer==0.5.2
+sahi==0.10.7
+scipy==1.5.4
+seaborn==0.11.2
+Shapely==1.8.4
 sip==4.19.8
+six==1.16.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+termcolor==1.1.0
+terminaltables==3.1.10
+thop==0.1.1.post2209072238
+torch==1.10.2
+torchvision==0.11.3
+tqdm==4.64.1
+traitlets==4.3.3
+typing_extensions==4.1.1
 urllib3==1.26.12
+wcwidth==0.2.5
+Werkzeug==2.0.3
 yarg==0.1.9
+yolov5==6.2.1
+zipp==3.6.0
