--- a/src/main/python/config.ini
+++ b/src/main/python/config.ini
@@ -1,3 +1,3 @@
 [default]
-url=http://localhost:3000
+url=http://192.168.20.14:3000/d/Kfm9JMHVk/zabbix-template-linux-server-win15?orgId=1&kiosk
 videoUrl=rtsp://admin:nutshell123456@192.168.20.198/h264/chn1/sub/av_stream
